change photo project

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                     class="w-10/12 lg:w-4/12 h-full text-white bg-blue-900 rounded-xl shadow-inner"
                 >
                     <div
-                        class="w-full rounded-t-md aspect-video bg-[url(./images/website.png)] bg-cover bg-center"
+                        class="w-full rounded-t-md aspect-video bg-[url(./images/webdiaz.png)] bg-cover bg-center"
                     ></div>
                     <div class="py-5 px-7">
                         <h1 class="text-2xl font-semibold text-blue-100 mb-2">
