--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                 <div
                     class="py-32 p-5 md:flex md:items-center md:justify-evenly"
                 >
-                    <div class="text-white space-y-4 mb-20 md:mb-0 flex flex-col justify-center">
+                    <div
+                        class="text-white space-y-4 mb-20 md:mb-0 flex flex-col justify-center"
+                    >
                         <h2 class="text-5xl font-medium">Hi, I'm</h2>
                         <h1 class="text-6xl text-blue-400 font-semibold">
                             Diaz Amantajati
@@ -418,7 +420,12 @@
                     ></div>
                     <div class="py-5 px-7">
                         <h1 class="text-2xl font-semibold text-blue-100 mb-2">
-                            This Website
+                            This <a
+                                href="https://aboutamantajatii.vercel.app"
+                                class="text-blue-300 transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:text-blue-400 cursor-pointer"
+                                target="_blank"
+                                >Website</a
+                            >
                         </h1>
                         <p class="text-sm text-zinc-300 text-justify mb-2">
                             This is my first website project, a significant
